<resources>
    <string name="app_name">Personal</string>
    <string name="user_data_pref">com.courseassignment.nitin.personal.UserDataPref</string>
    <string name="username">Username Key</string>
    <string name="password">Pass Key</string>
    <string name="Log_in">Log In</string>
    <string name="password_str">Password</string>
    <string name="signup_btn_txt">Sign Up</string>
    <string name="signup_username_edittext">Enter Your Name</string>
    <string name="phone_book_title">Personal Phone Book</string>
    <string name="images_title">Store Images</string>
    <string name="add_contact_title">Add New Contact</string>
    <string name="contact_name">Contact Full Name</string>
    <string name="contact_phn_no">Contact No</string>
    <string name="contact_address">Address</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="intStore">INTERNAL STORAGE</string>
    <string name="extStore">EXTERNAL STORAGE</string>
</resources>
